[WIP] fix text center alignment

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -2,10 +2,14 @@ td {
     width: 250px;
     text-align: center;
     border: 1px solid gray;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 th {
     text-align: center;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 /* Add a black background color to the top navigation bar */
